# CovidAgents

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CovidAgents.sln  README.md  build-blend2d.sh  build-full.sh  build.sh
CommandProcessorLib/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  CommandProcessorLib.vcxproj  Console.cpp  Console.h  TerminalConsole.cpp  TerminalConsole.h  Win32Console.cpp  Win32Console.h
Common/: Common.h  Common.vcxitems
CovAgentSim/: CMakeLists.txt  CommandsCounty.cpp  CommandsCounty.h  CommandsFileSystem.cpp  CommandsFileSystem.h  CommandsGeneral.cpp  CommandsGeneral.h  CommandsLea.cpp  CommandsLea.h  CommandsSimulation.cpp  CommandsSimulation.h  CovAgentSim.cpp  CovAgentSim.vcxproj  packages.config
IrelandDataConvertionTools/: CSharpGlossaryConverter.cs  CSharpGlossaryConverter.tt  CensusPopulationByAge.csv  CommuterMovements.cs  CppHeaderGlossary.cs  CppHeaderGlossary.tt  GlassaryColumn.cs  GlossaryTheme.cs  IrelandDataConversionTools.csproj  PopulationAgeSex.cs  Program.cs  Sex.cs  ShapeFileConverter.cs
IrelandDataConvertionTools/Properties/: launchSettings.json
PopulationSimulationLib/: BasePopulationContainer.cpp  BasePopulationContainer.h  CMakeLists.txt  CensusSAPS.h  Commuter.cpp  Commuter.h  County.cpp  County.h  Enums.h  Household.cpp  Household.h  Infection.cpp  Infection.h  LocalElectoralArea.cpp  LocalElectoralArea.h  NamedCode.cpp  NamedCode.h  Person.cpp  Person.h  Population.cpp  Population.h  PopulationDistributionDefinition.cpp  PopulationDistributionDefinition.h  PopulationSim.cpp  PopulationSim.h  PopulationSimulationLib.vcxproj  Region.cpp  Region.h  SmallArea.cpp  SmallArea.h  SmallAreaPolygon.cpp  SmallAreaPolygon.h  SmallAreas.cpp  SmallAreas.h  SubRegion.cpp  SubRegion.h  Variant.cpp  Variant.h
SampleData/Ireland/: census2016.popdistbyage
SharedLib/: CMakeLists.txt  CriticalSection.cpp  CriticalSection.h  Exceptions.cpp  Exceptions.h  RandomSource.cpp  RandomSource.h  SharedLib.vcxproj  VectorTaskThreader.cpp  VectorTaskThreader.h
SimulationsLib/: CMakeLists.txt  SimpleInfectionSimulator.cpp  SimpleInfectionSimulator.h  SimulationsLib.vcxproj  StandardVariant.cpp  StandardVariant.h
VisualisationLib/: CMakeLists.txt  CSVDayStatsWriter.cpp  CSVDayStatsWriter.h  DayInfoPlotter.cpp  DayInfoPlotter.h  DayStatsCollector.cpp  DayStatsCollector.h  DrawingCanvas.cpp  DrawingCanvas.h  DrawingFont.cpp  DrawingFont.h  FFMpegH264Writer.cpp  FFMpegH264Writer.h  ICanvasWriter.h  MapPlotter.cpp  MapPlotter.h  PngWriter.cpp  PngWriter.h  VisualisationLib.vcxproj  packages.config
modules/: FindGeographicLib.cmake
